@@ -31,6 +31,7 @@ import uk.gov.hmcts.reform.preapi.services.UserService;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
@@ -38,6 +39,7 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@SuppressWarnings("PMD.CouplingBetweenObjects")
 public class EntityCreationService {
     private final LoggingService loggingService;
     private final InMemoryCacheService cacheService;
@@ -60,7 +62,7 @@ public class EntityCreationService {
             throw new IllegalArgumentException("Court information is missing");
         }
 
-        var caseDTO = new CreateCaseDTO();
+        CreateCaseDTO caseDTO = new CreateCaseDTO();
         caseDTO.setId(UUID.randomUUID());
         caseDTO.setCourtId(cleansedData.getCourt().getId());
         caseDTO.setReference(cleansedData.getCaseReference());
@@ -123,12 +125,12 @@ public class EntityCreationService {
             captureSessionId = UUID.randomUUID();
         }
 
-        var captureSessionDTO = new CreateCaptureSessionDTO();
+        CreateCaptureSessionDTO captureSessionDTO = new CreateCaptureSessionDTO();
         captureSessionDTO.setId(captureSessionId);
         captureSessionDTO.setBookingId(booking.getId());
         captureSessionDTO.setStartedAt(cleansedData.getRecordingTimestamp());
 
-        var vodafoneUser = getUserByEmail(vodafoneUserEmail);
+        UUID vodafoneUser = getUserByEmail(vodafoneUserEmail);
         captureSessionDTO.setStartedByUserId(vodafoneUser);
         captureSessionDTO.setFinishedAt(cleansedData.getFinishedAt());
         captureSessionDTO.setFinishedByUserId(vodafoneUser);
@@ -146,7 +148,7 @@ public class EntityCreationService {
         UUID parentRecordingId = null;
 
         if (isCopy) {
-            Optional<MigrationRecord> currentRecordOpt = 
+            Optional<MigrationRecord> currentRecordOpt =
                 migrationRecordService.findByArchiveId(cleansedData.getArchiveId());
 
             if (currentRecordOpt.isPresent()) {
@@ -170,7 +172,7 @@ public class EntityCreationService {
             }
         }
 
-        var recordingDTO = new CreateRecordingDTO();
+        CreateRecordingDTO recordingDTO = new CreateRecordingDTO();
         UUID recordingId = UUID.randomUUID();
         recordingDTO.setId(recordingId);
         recordingDTO.setCaptureSessionId(captureSession.getId());
@@ -178,7 +180,7 @@ public class EntityCreationService {
         recordingDTO.setEditInstructions(null);
         recordingDTO.setVersion(cleansedData.getRecordingVersionNumber());
         recordingDTO.setFilename(cleansedData.getFileName());
-        
+
         if (isCopy) {
             recordingDTO.setParentRecordingId(parentRecordingId);
             recordingDTO.setVersion(recordingService.getNextVersionNumber(parentRecordingId));
@@ -189,15 +191,15 @@ public class EntityCreationService {
         return recordingDTO;
     }
 
-   
+
     public Set<CreateParticipantDTO> createParticipants(ProcessedRecording cleansedData) {
         Set<CreateParticipantDTO> participants = new HashSet<>();
 
-        if (cleansedData.getWitnessFirstName() != null && !cleansedData.getWitnessFirstName().trim().isEmpty()) {
+        if (cleansedData.getWitnessFirstName() != null && !cleansedData.getWitnessFirstName().isBlank()) {
             participants.add(createParticipant(ParticipantType.WITNESS, cleansedData.getWitnessFirstName(), ""));
         }
 
-        if (cleansedData.getDefendantLastName() != null && !cleansedData.getDefendantLastName().trim().isEmpty()) {
+        if (cleansedData.getDefendantLastName() != null && !cleansedData.getDefendantLastName().isBlank()) {
             participants.add(createParticipant(ParticipantType.DEFENDANT, "", cleansedData.getDefendantLastName()));
         }
 
@@ -205,7 +207,7 @@ public class EntityCreationService {
     }
 
     private CreateParticipantDTO createParticipant(ParticipantType type, String firstName, String lastName) {
-        var participantDTO = new CreateParticipantDTO();
+        CreateParticipantDTO participantDTO = new CreateParticipantDTO();
         participantDTO.setId(UUID.randomUUID());
         participantDTO.setParticipantType(type);
         participantDTO.setFirstName(firstName != null ? firstName : Constants.DEFAULT_NAME);
@@ -218,7 +220,7 @@ public class EntityCreationService {
         CreateUserDTO sharedWith,
         CreateUserDTO sharedBy
     ) {
-        var shareBookingDTO = new CreateShareBookingDTO();
+        CreateShareBookingDTO shareBookingDTO = new CreateShareBookingDTO();
         shareBookingDTO.setId(UUID.randomUUID());
         shareBookingDTO.setBookingId(bookingDTO.getId());
         shareBookingDTO.setSharedByUser(sharedBy.getId());
@@ -253,7 +255,7 @@ public class EntityCreationService {
     }
 
     public CreateInviteDTO createInvite(CreateUserDTO user) {
-        var createInviteDTO = new CreateInviteDTO();
+        CreateInviteDTO createInviteDTO = new CreateInviteDTO();
         createInviteDTO.setEmail(user.getEmail());
         createInviteDTO.setFirstName(user.getFirstName());
         createInviteDTO.setUserId(user.getId());
@@ -270,7 +272,7 @@ public class EntityCreationService {
                 .orElse(false);
         } catch (Exception e) {
             loggingService.logWarning("Could not check portal access for user: %s - %s", userId, e.getMessage());
-            return false; 
+            return false;
         }
     }
 
@@ -292,14 +294,14 @@ public class EntityCreationService {
                 PostMigratedItemGroup excludedResult = new PostMigratedItemGroup();
                 return excludedResult;
             }
-            
+
             sharedWith = new CreateUserDTO();
             sharedWith.setId(UUID.fromString(existingUserId));
             sharedWith.setEmail(lowerEmail);
             sharedWith.setFirstName(firstName);
             sharedWith.setLastName(lastName);
             loggingService.logDebug("Found existing user in cache: %s (%s)", lowerEmail, existingUserId);
-            
+
             if (!userHasPortalAccess(existingUserId)) {
                 CreateInviteDTO invite = createInvite(sharedWith);
                 invites.add(invite);
@@ -313,7 +315,7 @@ public class EntityCreationService {
             sharedWith = createUser(firstName, lastName, lowerEmail, UUID.randomUUID());
             cacheService.saveUser(lowerEmail, sharedWith.getId());
             loggingService.logDebug("Created new user: %s (%s)", lowerEmail, sharedWith.getId());
-            
+
             CreateInviteDTO invite = createInvite(sharedWith);
             invites.add(invite);
             loggingService.logDebug("Created invite for new user: %s (%s)", lowerEmail, sharedWith.getId());
@@ -330,7 +332,7 @@ public class EntityCreationService {
         }
 
         String vodafoneID = cacheService.getHashValue(Constants.CacheKeys.USERS_PREFIX,
-                                                      vodafoneUserEmail.toLowerCase(),
+                                                      vodafoneUserEmail.toLowerCase(Locale.UK),
                                                       String.class);
         CreateUserDTO sharedBy;
 
@@ -371,7 +373,7 @@ public class EntityCreationService {
         return result;
     }
 
-    
+
     private boolean isOrigRecordingPersisted(String archiveId) {
         Optional<MigrationRecord> maybeRecord = migrationRecordService.findByArchiveId(archiveId);
 
@@ -389,20 +391,20 @@ public class EntityCreationService {
                 loggingService.logDebug("User %s is deleted", email);
                 return false;
             }
-            
+
             var portalAccess = portalAccessRepository
                 .findByUser_IdAndDeletedAtNullAndUser_DeletedAtNull(userId);
-            
+
             if (portalAccess.isEmpty()) {
                 loggingService.logDebug("User %s has no portal access - allowing invite creation", email);
                 return true;
             }
-            
+
             if (portalAccess.get().getStatus() == AccessStatus.INACTIVE) {
                 loggingService.logDebug("User %s has INACTIVE portal access", email);
                 return false;
             }
-            
+
             loggingService.logDebug(
                 "User %s has active portal access with status: %s", email, portalAccess.get().getStatus());
             return true;
